feat: added comprehensive tests for the expense section services and models, minor changes to relative services